# wsproto

./: .coveragerc  .gitignore  .prospector.yml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  coverage.sh  pyproject.toml  setup.cfg  setup.py  test_client.py  test_requirements.txt  test_server.py  tox.ini  ws-fuzzingserver.json
.github/workflows/: ci.yml
.travis/: run.sh
bench/: connection.py
compliance/: run-autobahn-tests.py  test_client.py  test_server.py  ws-fuzzingclient.json
docs/: Makefile  make.bat
docs/source/: advanced-usage.rst  api.rst  basic-usage.rst  conf.py  index.rst  installation.rst
example/: synchronous_client.py  synchronous_server.py
examples/gevent/: client.py  server.py
examples/synchronous/: server.py
hws/: __init__.py  connection.py  events.py
src/wsproto/: __init__.py  connection.py  events.py  extensions.py  frame_protocol.py  handshake.py  utilities.py
test/: helpers.py  test_client.py  test_connection.py  test_events.py  test_extensions.py  test_frame_protocol.py  test_handshake.py  test_permessage_deflate.py  test_server.py  test_upgrade.py
tests/: helpers.py  test_client.py  test_connection.py  test_extensions.py  test_frame_protocol.py  test_handshake.py  test_permessage_deflate.py  test_server.py
wsproto/: __init__.py  compat.py  connection.py  events.py  exceptions.py  extensions.py  frame_protocol.py  handshake.py  utf8validator.py  utilities.py
